--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -311,7 +311,7 @@ border-radius: 5px;
      background: #3C2313;
      color: #FFFFFF;
  }
-
+/*
  .info{
      height: 200px;
      background: #3C2313;
@@ -320,16 +320,40 @@ border-radius: 5px;
      flex-direction: column;
      justify-content: flex-start;
      gap: 10px;
+     
 
  }
  
- #infopie{
-     max-width: 9%;
- }
- footer{
-     text-align: center;
-     background:#222222 ;
-     color: white;
-     height: 30px;
- }
+ 
+ 
+*/
 
+.contenedor_info{
+    padding: 20px;
+    width: 100%;
+    height: 250px;
+    background-color: #3C2313;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+ 
+ .itemsdeinfo{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+ }
+#logo2{
+    height: 25px;
+}
+ 
+ footer{
+    
+    text-align: center;
+    background:#222222 ;
+    color: white;
+    height: 30px;
+    padding: 5px;
+}
