--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -92,7 +92,7 @@ main{
 .slide {
     
     padding: 40px;
-    background-image: url(/img/fondo\ banner.png);
+    background-image: url(fondo\ banner.png);
     background-size: 100%;
     background-repeat: no-repeat;
     height: 400px;
