--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -249,18 +249,20 @@ border-radius: 5px;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
-    
+    color: #FFFFFF;
     background: #3C2313;
    
 }
+::placeholder{color: #FFFFFF}
 #botonreset{
     border-radius: 15px;
     width: 110px;
     height: 35px;
-    border: 0;
-    color: #FFFFFF
+    border: 4px;
+    color: black;
+
 }
-::placeholder{color: #FFFFFF}
+
 #botonenviar{
     border-radius: 15px;
     width: 110px;
@@ -290,19 +292,22 @@ border-radius: 5px;
 
  #formupeque{
      position: absolute;
-     left: 80%;
+     left: 70%;
  }
- #formulito{
+ .formulito{
      width: 275px;
      height: 40px;
      border-radius: 15px;
      border: 0;
      background: #E5E5E5;
-     color: black;
-     
-     
+     /*opacity: 90%;*/
+     color: black; 
     }
- #botonsub{
+.formulito::placeholder{
+    color:black
+}
+ #botonsub{ 
+     
      font-family: Roboto;
      font-style: normal;
      height: 30px;
@@ -310,7 +315,7 @@ border-radius: 5px;
      border-radius: 15px;
      border: 0;
      background: #3C2313;
-     color: #FFFFFF;
+     color: #ffffff;
  }
 /*
  .info{
