--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -304,7 +304,7 @@ border-radius: 5px;
      color: black; 
     }
 .formulito::placeholder{
-    color:black
+    color:#A0A0A0;
 }
  #botonsub{ 
      
