--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -214,7 +214,6 @@ border-radius: 5px;
  .cards{
      height:600px;
      width: 100%;
-     left: 95px;
      padding: 90px;
      display: flex;
      flex-direction: row;
@@ -223,7 +222,8 @@ border-radius: 5px;
 }
  
 #imagenes{
-    max-height: 100%;
+    height: 100%;
+    
 }
 
 #contactanos{
